--- a/jobs-tab/src/App.css
+++ b/jobs-tab/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+.container {
+	padding: 2rem;
+	background-color: #f7f7f7;
+	height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+	text-align: center;
+	font-size: 42px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.job {
+	display: grid;
+	grid-template-columns: 150px 700px;
+	justify-content: center;
+	margin-top: 5rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text {
+	display: grid;
+	grid-template-columns: 30px 1fr;
+	align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.company-tab {
+	margin-right: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.company-tab h4 {
+	font-size: 27px;
+	margin-bottom: 20px;
+	font-weight: 300;
+}
+
+.company-content {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	background-color: #f6f5f5;
+	padding: 25px 30px;
+	border-radius: 10px;
+	box-shadow: 1px -1px 8px 4px rgba(0, 0, 0, 0.08);
+}
+
+.company-name {
+	background-color: #dfdfde;
+	width: 8%;
+	text-align: center;
+	border-radius: 8px;
+	padding: 7px 5px;
+	font-weight: 600;
+	color: grey;
+}
+
+.text p {
+	padding-left: 10px;
+	line-height: 1.5;
+}
+
+.date {
+	font-size: 14px;
+}
+
+.job-title {
+	font-weight: 500;
 }
